# Black_Box

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
docs/: design.md  documentation.md
include/: BlackBox.hpp  BlackBoxHttpServer.hpp  MiniElastic.hpp  MiniElasticHttpServer.hpp
include/minielastic/: Analyzer.hpp  Checksum.hpp  LogStore.hpp
include/minielastic/algorithms/: SearchAlgorithms.hpp
scripts/: benchmark_results.json  package-lock.json  package.json  test_client.js  test_redis.js
src/: main.cpp
src/algorithms/: SearchAlgorithms.cpp
src/core/: Analyzer.cpp  readme.md
src/engine/: BlackBox.cpp  MiniElastic.cpp
src/server/: BlackBoxHttpServer.cpp  MiniElasticHttpServer.cpp
src/storage/: LogStore.cpp
tests/: BlackBoxTests.cpp
